# BurstMerge

./: .gitignore  AGENTS.md  CMakeLists.txt  PROGRESS.md  README.md  SyncARWLensCorr.ps1  todos.txt
Scripts/: benchmark_parallel.ps1
apps/cli/: CMakeLists.txt  main.cpp
apps/console/: CMakeLists.txt  compare_dng_pixels.cpp  main.cpp
apps/raw_resize/: CMakeLists.txt  main.cpp
cmake/: CompilerFlags.cmake  embed_shaders.ps1
docs/: gpu-maintenance-guide.md  plan-dsv4.md  rgb-pic-plan-dsv4.md  vulkan-backend-build-notes.md
docs/experiments/: 26-6-19-blacklevel-fractional-red-shadows.md  alignment-issues-and-test-plan.md  cpu-gpu-divergence.md  exposure-weighted-merge.md  gpu-port-audit.md
docs/plans/: raw_resize.md
docs/reviews/: 26-5-22.md  26-5-23-0-21.md  26-6-15-temporal-median-purple-fix.md  26-6-18-temporal-median-stack-overflow.md  26-6-23-parameter-audit.md
libburstmerge/: CMakeLists.txt
libburstmerge/include/burstmerge/: api.h  api_c.h
libburstmerge/include/burstmerge/internal/align/: align.h  align_common.h  align_dense.h  align_legacy.h  align_pyramid.h  align_standard.h
libburstmerge/include/burstmerge/internal/compute/: compute_backend.h  vulkan_backend.h
libburstmerge/include/burstmerge/internal/core/: fft_util.h  float_image.h  gpu_pipeline.h  image_buffer.h  pipeline.h  pipeline_align.h  pipeline_frame.h  pipeline_io.h  profiler.h  sub_graph.h  task_executor.h  types.h
libburstmerge/include/burstmerge/internal/denoise/: temporal.h
libburstmerge/include/burstmerge/internal/exposure/: exposure.h
libburstmerge/include/burstmerge/internal/io/: dng_io.h  image_decoder.h  image_writer.h
libburstmerge/include/burstmerge/internal/merge/: fft8.h  frequency.h  spatial.h
libburstmerge/src/: api.cpp  api_c.cpp
libburstmerge/src/align/: align.cpp  align_common.cpp  align_dense.cpp  align_legacy.cpp  align_pyramid.cpp  align_standard.cpp  align_warp.cpp  freq_align.cpp
libburstmerge/src/compute/vulkan/: vulkan_backend.cpp
libburstmerge/src/compute/vulkan/shaders/: add.comp  binomial_sep.comp  block_mean_guide.comp  box_blur.comp  common.glsl  copy.comp  dense_level.comp  dense_level_fp64.comp  downsample2x.comp  expbkt_acc.comp  exposure_curve_global.comp  exposure_reinhard_local.comp  extract.comp  fill.comp  float_to_uint16.comp  freq_laplacian.comp  freq_wiener_tile.comp  highlight_recovery.comp  max_to_gray.comp  normalize_div.comp  plane_to_mosaic.comp  prepare_texture.comp  reduce_scalar.comp  sad_global.comp  scale.comp  select_min.comp  spatial_acc_1ch.comp  spatial_acc_multi.comp  temporal_acc_exposure.comp  temporal_median.comp  tile_refine_diag.comp  tile_sad.comp  tile_select.comp  to_grayscale.comp  upscale_seed.comp  warp_tilefield.comp  warp_translate.comp
libburstmerge/src/core/: fft_util.cpp  float_image.cpp  gpu_pipeline.cpp  pipeline.cpp  pipeline_align.cpp  pipeline_frame.cpp  pipeline_io.cpp  profiler.cpp  task_executor.cpp
libburstmerge/src/denoise/: temporal.cpp
libburstmerge/src/exposure/: exposure.cpp
libburstmerge/src/io/: bmp_decoder.cpp  bmp_writer.cpp  dng_converter.cpp  dng_decoder.cpp  dng_reader.cpp  dng_sdk_bridge.cpp  dng_sdk_bridge.h  dng_writer.cpp  dng_writer_adapter.cpp  image_decoder.cpp  image_writer.cpp  jpeg_decoder.cpp  jpeg_writer.cpp  png_decoder.cpp  png_writer.cpp  tiff_decoder.cpp  tiff_writer.cpp
libburstmerge/src/merge/: frequency.cpp  spatial.cpp
libburstmerge/test/: CMakeLists.txt  test_align_gpu.cpp  test_aux.cpp  test_aux.h  test_common_rgb_fmt.cpp  test_deps.cpp  test_dng_io.cpp  test_highlight.cpp  test_stage0.cpp  test_stage1.cpp  test_stage2.cpp  test_stage3.cpp
tools/: dump_dng.cpp
